--- a/templates/transmission.template.yaml
+++ b/templates/transmission.template.yaml
@@ -10,6 +10,8 @@ platform: linux
 restart_policy: unless-stopped
 ports:
 - 9091:9091/tcp
+- 51413:51413/udp
+- 51413:51413/tcp
 network_mode: bridge
 volumes:
 - container: "/data"
